--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "alex507rocha/ecommerce",
+    "name": "hcodebr/ecommerce",
     "authors": [
         {
             "name": "Ecommerce",
@@ -9,11 +9,11 @@
     "require": {
     	"phpmailer/phpmailer":"5.2.22",
     	"slim/slim":"2.0",
-    	"rain/raintpl":"3.0.0"
+    	"rain/raintpl":"3.0.0"  
     },
     "autoload": {
         "psr-4": {
-            "": "vendor\\hcodebr\\php-classes\\src"
-        }
+            "Hcode\\": "vendor\\hcodebr\\php-classes\\src"
+        }   
     }
-}
+}       
